slide toggle floating on top of header fixed with z-index header

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,5 +2,5 @@
   bottom: 0;
   width: 100%;
   position: sticky;
-  z-index: 1;
+  z-index: 2;
 }
